# terrk

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.toml.backup  pyvenv.cfg  requirements.txt  setup.py  setup.sh
docs/: apply.md  config.md  create.md  delete.md  list.md  root.md
src/: __main__.py  apply.py  config.py  constants.py  create.py  delete.py  example.yaml  list.py  terrk.py  utility.py
src/terrk/: __main__.py  apply.py  config.py  create.py  delete.py  list.py
src/terrk/utils/: apply_core.py  constants.py  create_core.py  list_core.py  utility.py
src/utils/: apply_core.py  constants.py  create_core.py  delete_core.py  utility.py
