[tool.poetry]
name = "terrk"
version = "0.1.0"
description = "a simple cli tool for managing Terraform cloud resources"
authors = ["ayomodu"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
    ]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
click = "8.1.7"
requests = "2.32.3"
PyYaml = "6.0.2"
prettytable = "3.12.0"
python-dateutil = "2.9.0"
pandas = "2.2.3"
openpyxl = "*"
pydantic = "2.10.4"
jsonschema = "4.23.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
terrk = "src.__main__:cli"